<resources>
    <string name="app_name">PexelsApp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="search">Search</string>
    <string name="photo">Photo</string>
    <string name="vector_path_placeholder">M43.75,0H6.25C4.593,0.001 3.004,0.66 1.832,1.832C0.66,3.004 0.001,4.593 0,6.25V43.75C0.001,45.407 0.66,46.996 1.832,48.168C3.004,49.34 4.593,49.999 6.25,50H43.75C45.407,49.999 46.996,49.34 48.168,48.168C49.34,46.996 49.999,45.407 50,43.75V6.25C49.999,4.593 49.34,3.004 48.168,1.832C46.996,0.66 45.407,0.001 43.75,0ZM6.25,47.5C5.255,47.5 4.302,47.105 3.598,46.402C2.895,45.698 2.5,44.745 2.5,43.75V30.688L11.908,21.282C12.729,20.465 13.841,20.005 15,20.005C16.159,20.005 17.271,20.465 18.093,21.282L44.263,47.447C44.092,47.472 43.925,47.498 43.75,47.5H6.25ZM47.5,43.75C47.5,44.695 47.138,45.55 46.557,46.21L29.267,28.92L31.907,26.282C32.729,25.465 33.841,25.005 35,25.005C36.159,25.005 37.271,25.465 38.092,26.282L47.5,35.688V43.75ZM47.5,32.153L39.86,24.515C38.57,23.228 36.822,22.506 35,22.506C33.178,22.506 31.43,23.228 30.14,24.515L27.5,27.15L19.86,19.515C18.551,18.265 16.81,17.567 15,17.567C13.19,17.567 11.449,18.265 10.14,19.515L2.5,27.15V6.25C2.5,5.255 2.895,4.302 3.598,3.598C4.302,2.895 5.255,2.5 6.25,2.5H43.75C44.745,2.5 45.698,2.895 46.402,3.598C47.105,4.302 47.5,5.255 47.5,6.25V32.153Z</string>
    <string name="no_results_found">No results found</string>
    <string name="explore">Explore</string>
    <string name="no_internet_stub">no internet stub</string>
    <string name="bad_internet_connection">Bad internet connection</string>
    <string name="back_icon">back icon</string>
    <string name="download_button">download button</string>
    <string name="empty_details_stub">empty details stub</string>
    <string name="id" translatable="false">arg_id_name</string>
    <string name="image_not_found">Image not found</string>
    <string name="download">Download</string>
    <string name="scroll_photo">scroll photo</string>
    <string name="you_haven_t_saved_anything_yet">You haven\'t saved anything yet</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="error">Error</string>
    <string name="jpg">.jpg</string>
    <string name="path">image/jpg</string>
    <string name="saved_to_gallery">Saved to gallery</string>
</resources>