<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/square_rounded_background"
        android:contentDescription="@string/back_icon"
        android:padding="10dp"
        android:src="@drawable/back_vector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_image_stub_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_not_found"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/no_image_stub_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/no_image_stub_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/explore"
        android:textColor="#BB1020"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_image_stub_text" />

    <TextView
        android:id="@+id/authors_initials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#1E1E1E"
        android:textSize="16sp"
        android:textStyle="bold"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="@id/back_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_icon" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:progressTint="#BB1020"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/back_icon" />

    <ScrollView
        android:id="@+id/photo_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/scroll_photo"
        app:layout_constraintBottom_toTopOf="@id/bottom_buttons"
        app:layout_constraintTop_toBottomOf="@id/back_icon">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/photoItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:background="@drawable/image_back"
            android:scaleType="center"
            app:riv_corner_radius="12dp" />
    </ScrollView>

    <RelativeLayout
        android:id="@+id/bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/download_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/oval_backgroud"
            android:padding="20dp"
            android:paddingStart="80dp"
            android:paddingEnd="40dp"
            android:text="@string/download"
            android:textColor="#1E1E1E"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/download_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/red_circle_background"
            android:contentDescription="@string/download_button"
            android:padding="20dp"
            android:src="@drawable/download_vector" />

        <ImageButton
            android:id="@+id/bookmark_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/grey_circle_background"
            android:contentDescription="@string/download_button"
            android:padding="20dp"
            android:src="@drawable/bookmark_vector" />

        <ImageButton
            android:id="@+id/bookmark_bt_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/red_circle_background"
            android:contentDescription="@string/download_button"
            android:padding="20dp"
            android:src="@drawable/bookmark_vector_active"
            android:visibility="gone" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/stabGroupView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="no_image_stub_text,no_image_stub_bt"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/resultsGroupView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="authors_initials,photo_scroll_view,bottom_buttons"/>

</androidx.constraintlayout.widget.ConstraintLayout>