<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.bookmark.BookmarksFragment">

    <TextView
        android:id="@+id/bookmark_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookmarks"
        android:textColor="#1E1E1E"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mulish"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/no_results_stub_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_haven_t_saved_anything_yet"
        android:textColor="#1E1E1E"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/no_results_stub_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/no_results_stub_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/explore"
        android:textColor="#BB1020"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_results_stub_text" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:progressTint="#BB1020"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bookmark_heading" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/photos_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:clipToPadding="false"
        android:paddingBottom="120dp"
        app:layout_constraintTop_toBottomOf="@id/progressBar" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/stabGroupView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="no_results_stub_bt,no_results_stub_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>